--- a/packages/private-design-output/src/scss/uqds_uq-standard.scss
+++ b/packages/private-design-output/src/scss/uqds_uq-standard.scss
@@ -1,6 +1,4 @@
-
-@use 'footer/src/scss/component' as uq-footer;
-@use 'header/src/scss/component' as uq-header;
-@use 'form/src/scss/component' as form;
-@use 'site-header/src/scss/component' as site-header;
-
+@use "footer/src/scss/component" as uq-footer;
+@use "header/src/scss/component" as uq-header;
+@use "form/src/scss/component" as form;
+@use "site-header/src/scss/component" as site-header;
