--- a/packages/storybook-html/stories/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/stories/components/intro/kitchen-sink.html
@@ -4,7 +4,7 @@
       <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle" data-gtm-action="Toggle">Menu</button>
     </div>
     <div class="uq-header__logo" data-gtm-category="Primary header">
-      <a class="logo--large" href="https://www.uq.edu.au/" data-gtm-label="UQ Logo">
+      <a class="logo--large" href="https://www.uq.edu.au" data-gtm-label="UQ Logo">
         <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
       </a>
     </div>        
@@ -157,7 +157,7 @@
   </nav>
   <div class="uq-header__search" data-gtm-category="Search">
     <div class="uq-header__search-container">
-      <form action="https://www.uq.edu.au/search/" method="get">
+      <form action="https://www.uq.edu.au/search" method="get">
         <fieldset>
           <div class="uq-header__search-query">
             <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
@@ -171,7 +171,7 @@
             <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
           </div>
           <div class="uq-header__search-range">
-            <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio uq-header__search-radio">
+            <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au" checked="checked" class="form-radio uq-header__search-radio">
             <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website (future-students.uq.edu.au)</label>
           </div>
         </fieldset>
@@ -182,10 +182,10 @@
     <nav class="uq-header__nav-secondary-container">
       <ul class="uq-header__nav-secondary-list">
           <li class="uq-header__nav-secondary-item">
-             <a href="https://www.uq.edu.au/" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
+             <a href="https://www.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-              <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">News</a>
+              <a href="https://www.uq.edu.au/news" rel="external" class="uq-header__nav-secondary-link">News</a>
           </li>
           <li class="uq-header__nav-secondary-item">
               <a href="https://www.uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
@@ -194,7 +194,7 @@
               <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__nav-secondary-link">Give</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-            <a href="https://contacts.uq.edu.au/" rel="external" class="uq-header__nav-secondary-link">Contact</a>
+            <a href="https://contacts.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">Contact</a>
           </li>
       </ul>
     </nav>
@@ -1025,7 +1025,7 @@
               <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
@@ -1033,10 +1033,10 @@
           <h2 class="uq-footer__navigation-title">Working at UQ</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
+              <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
+              <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -1053,10 +1053,10 @@
           <h2 class="uq-footer__navigation-title">Current students</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
+              <a href="https://my.uq.edu.au" class="uq-footer__navigation-link">my.UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
+              <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -1073,7 +1073,7 @@
           <h2 class="uq-footer__navigation-title">Library</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
+              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
@@ -1090,19 +1090,19 @@
           <h2 class="uq-footer__navigation-title">Contact</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
+              <a href="https://contacts.uq.edu.au" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
+              <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
             </li>
           </ul>
         </li>
@@ -1122,7 +1122,7 @@
               <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
@@ -1130,10 +1130,10 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working at UQ</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
+              <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
+              <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -1150,10 +1150,10 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Current students</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
+              <a href="https://my.uq.edu.au" class="uq-footer__navigation-link">my.UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
+              <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -1170,7 +1170,7 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Library</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
+              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
@@ -1187,19 +1187,19 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Contact</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
+              <a href="https://contacts.uq.edu.au" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
+              <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
             </li>
           </ul>
         </li>
@@ -1210,10 +1210,10 @@
       <nav class="uq-footer__contact-item" aria-label="Social Media" data-gtm-category="Social share link">
         <ul class="uq-footer__footer-list uq-footer__contact-social"> 
           <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Facebook" data-gtm-label="Facebook"></a></li> 
-          <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
+          <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/school/university-of-queensland" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
           <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Twitter" data-gtm-label="Twitter"></a></li>
           <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Youtube" data-gtm-label="Youtube"></a></li>
-          <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
         </ul>
       </nav> 
       <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
@@ -1230,13 +1230,13 @@
     <nav class="uq-footer__footer" aria-label="Terms and conditions">
       <ul class="uq-footer__footer-list">
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/legal/terms-of-use/" class="uq-footer__link">Privacy and terms of use</a>
+              <a href="https://www.uq.edu.au/legal/terms-of-use" class="uq-footer__link">Privacy and terms of use</a>
           </li>
           <li class="uq-footer__footer-item">
-            <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
+            <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
           </li>
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
+              <a href="https://www.uq.edu.au/rti" class="uq-footer__link">Right to information</a>
           </li>
           <li class="uq-footer__footer-menu__item">
             <a href="https://my.uq.edu.au/feedback?r=https://uq.edu.au" class="uq-footer__link">Feedback</a>
