--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -21,8 +21,9 @@
                     <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://study.uq.edu.au/study-options/programs" data-gtm-label="Study > Find a course or program">Find a course or program</a></li>
-                        <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
+                        <li><a href="https://study.uq.edu.au/study-options/browse-study-areas" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
                         <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Study options">Study options</a></li>
+                        <li><a href="https://study.uq.edu.au/short-courses" data-gtm-label="Study > Short courses">Short courses</a></li>
                         <li><a href="https://study.uq.edu.au/admissions" data-gtm-label="Study > How to apply">How to apply</a></li>
                         <li><a href="https://scholarships.uq.edu.au" data-gtm-label="Study > Scholarships">Scholarships</a></li>
                         <li><a href="https://my.uq.edu.au/starting-at-uq" data-gtm-label="Study > Starting at UQ">Starting at UQ</a></li>
@@ -50,7 +51,7 @@
                         <li><a href="https://study.uq.edu.au/high-school-students" data-gtm-label="Study > High school students">High school students</a></li>
                         <li><a href="https://study.uq.edu.au/non-school-leavers" data-gtm-label="Study > Non-school leavers">Non-school leavers</a></li>
                         <li><a href="https://study.uq.edu.au/study-options/research" data-gtm-label="Study > Postgraduate research (HDR) students">Postgraduate research (HDR) students</a></li>
-                        <li><a href="https://atsis.uq.edu.au/future-students" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
+                        <li><a href="https://indigenous-engagement.uq.edu.au/study" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
                         <li><a href="https://study.uq.edu.au/study-options/study-abroad" data-gtm-label="Study > Study abroad and exchange students">Study abroad and exchange students</a></li>
                         <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Study > Teachers and guidance counsellors">Teachers and guidance counsellors</a></li>
                         <li><a href="https://study.uq.edu.au/parents" data-gtm-label="Study > Parents and guardians">Parents and guardians</a></li>
@@ -117,7 +118,7 @@
                         <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Partnership opportunities">Partnership opportunities</a></li>
                         <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Partners and community > Research and corporate partnerships">Research and corporate partnerships</a></li>
                         <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Work placements and internships">Work placements and internships</a></li>
-                        <li><a href="https://global-engagement.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
+                        <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
                         <li><a href="https://about.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorship">Sponsorship</a></li>
                       </ul>
                     </div>
@@ -128,7 +129,7 @@
                       <ul>
                         <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni community">Alumni community</a></li>
                         <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Giving and philanthropy">Giving and philanthropy</a></li>
-                        <li><a href="https://atsis.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
+                        <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
                         <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
                         <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Community engagement and volunteering">Community engagement and volunteering</a></li>
                         <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Community facilities and services">Community facilities and services</a></li>
@@ -213,8 +214,9 @@
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Study with us</a>
             <ul>
               <li><a href="https://study.uq.edu.au/study-options/programs" data-gtm-label="Study > Find a course or program">Find a course or program</a></li>
-              <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
+              <li><a href="https://study.uq.edu.au/study-options/browse-study-areas" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
               <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Study options">Study options</a></li>
+              <li><a href="https://study.uq.edu.au/short-courses" data-gtm-label="Study > Short courses">Short courses</a></li>
               <li><a href="https://study.uq.edu.au/admissions" data-gtm-label="Study > How to apply">How to apply</a></li>
               <li><a href="https://scholarships.uq.edu.au" data-gtm-label="Study > Scholarships">Scholarships</a></li>
               <li><a href="https://my.uq.edu.au/starting-at-uq" data-gtm-label="Study > Starting at UQ">Starting at UQ</a></li>
@@ -238,7 +240,7 @@
               <li><a href="https://study.uq.edu.au/high-school-students" data-gtm-label="Study > High school students">High school students</a></li>
               <li><a href="https://study.uq.edu.au/non-school-leavers" data-gtm-label="Study > Non-school leavers">Non-school leavers</a></li>
               <li><a href="https://study.uq.edu.au/study-options/research" data-gtm-label="Study > Postgraduate research (HDR) students">Postgraduate research (HDR) students</a></li>
-              <li><a href="https://atsis.uq.edu.au/future-students" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
+              <li><a href="https://indigenous-engagement.uq.edu.au/study" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
               <li><a href="https://study.uq.edu.au/study-options/study-abroad" data-gtm-label="Study > Study abroad and exchange students">Study abroad and exchange students</a></li>
               <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Study > Teachers and guidance counsellors">Teachers and guidance counsellors</a></li>
               <li><a href="https://study.uq.edu.au/parents" data-gtm-label="Study > Parents and guardians">Parents and guardians</a></li>
@@ -296,7 +298,7 @@
               <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Partnership opportunities">Partnership opportunities</a></li>
               <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Partners and community > Research and corporate partnerships">Research and corporate partnerships</a></li>
               <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Work placements and internships">Work placements and internships</a></li>
-              <li><a href="https://global-engagement.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
+              <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
               <li><a href="https://about.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorship">Sponsorship</a></li>
             </ul>
           </li>
@@ -305,7 +307,7 @@
             <ul>
               <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni community">Alumni community</a></li>
               <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Giving and philanthropy">Giving and philanthropy</a></li>
-              <li><a href="https://atsis.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
+              <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
               <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
               <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Community engagement and volunteering">Community engagement and volunteering</a></li>
               <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Community facilities and services">Community facilities and services</a></li>
