--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -72,7 +72,7 @@
                     <div class="megamenu__heading">Our research</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://research.uq.edu.au/news/impact" data-gtm-label="Research > Research impact">Research impact</a></li>
+                        <li><a href="https://research.uq.edu.au/news" data-gtm-label="Research > Research news">Research news</a></li>
                         <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
                         <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Research > Industry research collaboration">Industry research collaboration</a></li>
                         <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
@@ -259,7 +259,7 @@
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our research</a>
             <ul>
-              <li><a href="https://research.uq.edu.au/news/impact" data-gtm-label="Research > Research impact">Research impact</a></li>
+              <li><a href="https://research.uq.edu.au/news" data-gtm-label="Research > Research news">Research news</a></li>
               <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
               <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Research > Industry research collaboration">Industry research collaboration</a></li>
               <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
