iterate through ds updating variable labels

--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -29,23 +29,23 @@ body {
   }
 
   &-h2 {
-    font-size: core-global.$font-size-xxl !important;
+    font-size: core-global.$font-size-xxxl !important;
   }
 
   &-h3 {
-    font-size: core-global.$font-size-xl !important;
+    font-size: core-global.$font-size-xxl !important;
   }
 
   &-h4 {
-    font-size: core-global.$font-size-l !important;
+    font-size: core-global.$font-size-xl !important;
   }
 
   &-h5 {
-    font-size: core-global.$font-size-m !important;
+    font-size: core-global.$font-size-l !important;
   }
 
   &-h6 {
-    font-size: core-global.$font-size !important;
+    font-size: core-global.$font-size-m !important;
   }
 
   &-h2,
