--- a/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
@@ -28,7 +28,7 @@
 
   &-indicator {
     font-size: 0;
-    line-height: core.$font-size * core.$line-height;
+    line-height: core.$font-size-m * core.$line-height;
     white-space: nowrap;
 
     span {
