additional updates to references

--- a/packages/alert/src/scss/_global.scss
+++ b/packages/alert/src/scss/_global.scss
@@ -12,9 +12,9 @@ $alert-global-warning-bg-color: core.$warning !default;
 $alert-global-error-bg-color: core.$alert !default;
 
 $alert-font-size-s: core.$font-size-s !default;
-$alert-font-size: core.$font-size !default;
-$alert-font-size-m: core.$font-size-m !default;
-$alert-font-size-l: core.$font-size-l !default;
+$alert-font-size: core.$font-size-m !default;
+$alert-font-size-m: core.$font-size-l !default;
+$alert-font-size-l: core.$font-size-xl !default;
 
 $alert-font-weight-thin: core.$font-weight-thin !default;
 $alert-font-weight-medium: core.$font-weight-medium !default;
