--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -41,7 +41,7 @@
 
   &__body {
     font-family: "Merriweather", serif;
-    font-size: core.$font-size-l;
+    font-size: core.$font-size-xl;
     font-weight: 300;
     line-height: 1.4;
     margin-left: core.$space-none;
