--- a/packages/core/src/scss/_partials/_text-constants.scss
+++ b/packages/core/src/scss/_partials/_text-constants.scss
@@ -10,7 +10,7 @@ $font-accent: $merriweather;
 $font-monospace: $courier;
 
 // font sizes
-$font-size-xxxxl: 3rem; /* 48px */
+$font-size-ul: 3rem; /* 48px */
 $font-size-xxxxl: 2.5rem; /* 40px - H1 */
 $font-size-xxxl: 2rem; /* 32px - H2 */
 $font-size-xxl: 1.5rem; /* 24px - H3 */
