--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -62,7 +62,7 @@
       @media #{core.$screen-lg-up} {
         display: block;
         font-family: core.$roboto;
-        font-size: core.$font-size;
+        font-size: core.$font-size-m;
         text-align: right;
         width: 3.2rem;
       }
@@ -414,7 +414,7 @@
     border: 2px solid transparent;
     color: core.$uq-purple;
     display: inline-block;
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
     height: 2.75rem;
     line-height: 1.5;
     margin-bottom: 0;
@@ -456,7 +456,7 @@
     z-index: 3;
     cursor: pointer;
     outline-offset: -2px;
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
   }
 
   &__search-range {
@@ -486,7 +486,7 @@
     line-height: 1.7 !important;
 
     @media #{core.$screen-lg-up} {
-      font-size: core.$font-size !important;
+      font-size: core.$font-size-m !important;
       line-height: 1.4 !important;
     }
   }
@@ -595,7 +595,7 @@ body.no-scroll {
   right: core.$space-none;
   overflow-y: auto;
   overflow-x: hidden;
-  font-size: core.$font-size;
+  font-size: core.$font-size-m;
   color: core.$uq-purple;
 
   @media #{core.$screen-lg-up} {
@@ -650,7 +650,7 @@ body.no-scroll {
     cursor: pointer;
     padding: 0.75rem core.$space-l;
     text-decoration: none;
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
     color: core.$uq-purple;
     position: relative;
 
