--- a/packages/site-header/src/scss/_global.scss
+++ b/packages/site-header/src/scss/_global.scss
@@ -1,6 +1,6 @@
 @use "@uqds/core/src/scss/global" as core;
 
-$title-font-size: core.$font-size-l;
+$title-font-size: core.$font-size-xl;
 $title-font-weight: core.$font-weight-bold;
 
 $nav-primary: core.$uq-black;
