--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -38,7 +38,7 @@
     cursor: pointer;
     display: inline-block;
     font-family: core.$font-body;
-    font-size: core.$font-size-l;
+    font-size: core.$font-size-xl;
     font-weight: 400;
     line-height: core.$line-height-h;
     margin: core.$space-none;
@@ -153,7 +153,7 @@
   // Compact Modifier, reduces size for use in mixed components.
   &--compact {
     & .uq-accordion__toggle {
-      font-size: core.$font-size;
+      font-size: core.$font-size-m;
       padding: core.$space-s core.$space-xxxxl core.$space-s core.$space-m;
     }
 
