--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -67,38 +67,38 @@ $use-encapsulation: false !default;
   h1 {
     margin-top: core.$space-l;
     margin-bottom: core.$space-xxl;
-    font-size: core.$font-size-xxxl;
+    font-size: core.$font-size-xxxxl;
     font-family: core.$font-title;
   }
 
   h2 {
     margin-top: core.$space-xxl;
     margin-bottom: core.$space-l;
-    font-size: core.$font-size-xxl;
+    font-size: core.$font-size-xxxl;
   }
 
   h3 {
     margin-top: core.$space-xl;
     margin-bottom: core.$space-m;
-    font-size: core.$font-size-xl;
+    font-size: core.$font-size-xxl;
   }
 
   h4 {
     margin-top: core.$space-xl;
     margin-bottom: core.$space-l;
-    font-size: core.$font-size-l;
+    font-size: core.$font-size-xl;
   }
 
   h5 {
     margin-top: core.$space-l;
     margin-bottom: core.$space-m;
-    font-size: core.$font-size-m;
+    font-size: core.$font-size-l;
   }
 
   h6 {
     margin-top: core.$space-l;
     margin-bottom: core.$space-s;
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
   }
 
   p {
@@ -121,7 +121,7 @@ $use-encapsulation: false !default;
     border-left: 6px solid core.$text;
     font-family: core.$font-accent;
     font-style: italic;
-    font-size: core.$font-size-l;
+    font-size: core.$font-size-xl;
   }
 
   ol,
@@ -153,7 +153,7 @@ $use-encapsulation: false !default;
     dd {
       margin-left: core.$space-none;
       margin-bottom: core.$space-l;
-      font-size: core.$font-size-m;
+      font-size: core.$font-size-l;
     }
   }
 
@@ -197,27 +197,27 @@ $use-encapsulation: false !default;
 
     // Text size
     &--xxxxl {
-      font-size: core.$font-size-xxxl;
+      font-size: core.$font-size-xxxxl;
     }
 
     &--xxxl {
-      font-size: core.$font-size-xxl;
+      font-size: core.$font-size-xxxl;
     }
 
     &--xxl {
-      font-size: core.$font-size-xl;
+      font-size: core.$font-size-xxl;
     }
 
     &--xl {
-      font-size: core.$font-size-l;
+      font-size: core.$font-size-xl;
     }
 
     &--l {
-      font-size: core.$font-size-m;
+      font-size: core.$font-size-l;
     }
 
     &--m {
-      font-size: core.$font-size;
+      font-size: core.$font-size-m;
     }
 
     &--s {
