--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -11,7 +11,7 @@
   cursor: pointer;
   display: inline-block;
   font-family: $button-font;
-  font-size: core.$font-size;
+  font-size: core.$font-size-m;
   font-weight: normal;
   line-height: normal;
   padding: core.$space-s core.$space-l;
@@ -188,7 +188,7 @@
   }
 
   &--large {
-    font-size: core.$font-size-m;
+    font-size: core.$font-size-l;
     padding: core.$space-m core.$space-xxl;
   }
 
