--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -14,7 +14,7 @@ $form-placeholder-color: core.$uq-neutral-dark40;
 $form-spacing: core.$space-m;
 $form-text-color: core.$text;
 $form-text-disabled-color: core.$uq-neutral-dark20;
-$form-text-size: core.$font-size;
+$form-text-size: core.$font-size-m;
 
 // Select
 $form-select-icon: core.$uq-purple;
