--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -7,7 +7,7 @@
   border-top: core.$space-xs solid core.$uq-purple;
   box-sizing: border-box;
   font-family: core.$font-body;
-  font-size: core.$font-size;
+  font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
 
@@ -22,7 +22,7 @@
     padding: core.$space-m core.$space-l;
 
     &-link {
-      font-size: core.$font-size-l;
+      font-size: core.$font-size-xl;
       color: core.$uq-purple;
       text-decoration: none;
 
