replaced merriweather with roboto. updated private-design-output. updated docs to reflect.

--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -40,7 +40,7 @@
   }
 
   &__body {
-    font-family: "Merriweather", serif;
+    font-family: core.$roboto;
     font-size: core.$font-size-xl;
     font-weight: 300;
     line-height: 1.4;
