--- a/packages/core/src/scss/_partials/_text-constants.scss
+++ b/packages/core/src/scss/_partials/_text-constants.scss
@@ -1,12 +1,11 @@
 // font family
 $roboto: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$merriweather: "Merriweather", Georgia, serif;
 $montserrat: "Montserrat", Helvetica, Arial, sans-serif;
 $courier: "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
 
 $font-body: $roboto;
 $font-title: $montserrat;
-$font-accent: $merriweather;
+$font-accent: $roboto;
 $font-monospace: $courier;
 
 // font sizes
