--- a/packages/footer-legacy/src/scss/_component.scss
+++ b/packages/footer-legacy/src/scss/_component.scss
@@ -35,7 +35,7 @@
   &__acknowledgement {
     border-bottom: 1px solid rgba(core.$uq-white, 0.3);
     color: $site-footer-color;
-    font-family: core.$merriweather;
+    font-family: core.$roboto;
     font-size: core.$font-size-m;
     font-style: italic;
     font-weight: core.$font-weight-normal;
