--- a/packages/header-legacy/src/scss/_component.scss
+++ b/packages/header-legacy/src/scss/_component.scss
@@ -188,7 +188,7 @@
 
     &-title {
       color: core.$uq-white;
-      font-family: core.$merriweather;
+      font-family: core.$roboto;
       font-size: core.$font-size-m;
       font-style: italic;
       font-weight: core.$font-weight-normal;
