--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -48,7 +48,7 @@
       width: core.$space-l;
       height: core.$space-l;
       position: absolute;
-      top: 0.85rem;
+      top: core.$font-size-xs;
       left: -(core.$space-m);
     }
 
