--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -6,6 +6,10 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  font-family: core.$font-body;
+  font-size: core.$font-size;
+  font-weight: core.$font-weight-normal;
+  line-height: core.$line-height;
   height: 100%;
   background-color: core.$uq-white;
   border: 1px solid core.$uq-neutral-light60;
@@ -81,6 +85,9 @@
   }
 
   &__body {
+    p {
+      margin-top: 0;
+    }
     p:last-child {
       margin-bottom: core.$space-none;
     }
