update to alerts

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -58,7 +58,7 @@
 
     p {
       margin-bottom: core.$space-m;
-      margin-top: $space-none;
+      margin-top: core.$space-none;
 
       &:last-child {
         margin-bottom: core.$space-none;
