--- a/packages/lists/src/scss/_component.scss
+++ b/packages/lists/src/scss/_component.scss
@@ -13,6 +13,10 @@
 
 %vertical-list,
 .vertical-list {
+  font-family: core.$font-body;
+  font-size: core.$font-size;
+  font-weight: core.$font-weight-normal;
+  line-height: core.$line-height;
   list-style-type: none;
   margin-bottom: core.$space-m;
   padding: core.$space-none;
@@ -75,9 +79,14 @@
 
 .horizontal-list {
   display: inline-block;
+  font-family: core.$font-body;
+  font-size: core.$font-size;
+  font-weight: core.$font-weight-normal;
+  line-height: core.$line-height;
   list-style-type: none;
   padding: core.$space-none;
   margin-bottom: core.$space-m;
+  
 
   &__title {
     font-size: $h3-font-size;
