initial tweaks to breadcrumb and site-header components to align with updated designs

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -329,6 +329,13 @@
     // }
   }
 
+  &__breadcrumb-container {
+    padding: 1rem;
+    border-bottom: 1px solid #e2e2e2;
+
+
+  }
+
   &--no-site-title {
     .uq-site-header__title-container {
       justify-content: flex-end;
