--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
@@ -1,5 +1,5 @@
-<nav aria-label="breadcrumb">
-  <ol class="uq-breadcrumb" itemscope="" itemtype="https://schema.org/BreadcrumbList">
+<nav class="uq-breadcrumb" aria-label="breadcrumb">
+  <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
     <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
       <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
       <meta itemprop="position" content="1">
@@ -9,7 +9,7 @@
       <meta itemprop="position" content="2">
     </li>
     <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/internet-and-wifi">Internet and wifi</a>
+      Internet and wifi
       <meta itemprop="position" content="3">
     </li>
   </ol>
