--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -1,64 +1,70 @@
 @use "@uqds/core/src/scss/global" as core;
-@use "@uqds/icon/src/scss/global" as icon-constants;
+@use "@uqds/icon/src/scss/global" as icon;
 @import "global";
 
 // Breadcrumb
 .uq-breadcrumb {
-  box-sizing: border-box;
-  font-family: core.$font-body;
-  font-size: core.$font-size-m;
-  font-weight: core.$font-weight-normal; // will set font-weight to 400 like the FS version Is currently
-  line-height: core.$line-height;
-  color: $breadcrumb-link;
-  list-style: none;
-  margin: core.$space-none;
-  padding: core.$space-none;
 
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
+  padding: 1rem;
+
+  @media #{core.$screen-lg-up} {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 73.25rem;
   }
 
   // Breadcrumb item
+  &__list {
+    margin: 0;
+    padding: 0;
+  }
+
+
+  // Breadcrumb item
   &__item {
-    display: inline;
-    float: left;
-    margin: core.$space-none;
-
-    &::before {
-      content: "";
-      margin: core.$space-xs core.$space-s;
-      padding: core.$space-s core.$space-s;
-      background-image: url(icon-constants.get-icon(
-        "standard--arrow-right-1",
-        core.$uq-neutral-dark60
-      ));
-      background-repeat: no-repeat;
-      float: left;
+    display: none;
+    background-image: url(icon.get-icon(
+      "standard--chevron-left-sml",
+      core.$uq-neutral-dark80
+    ));
+    background-position: left 0.2rem center;
+    padding: 0 0 0 1.5rem;
+    
+    &:nth-last-child(2) {
+        display: inline-block;
     }
+    margin: 0;
+    font-size: core.$font-size-s;
+    color: core.$uq-neutral-dark40;
+    background-repeat: no-repeat;
+    background-size: 1rem;
 
-    &:first-child {
-      &::before {
-        content: "";
-        display: none;
+    @media #{core.$screen-md-up} {
+      display: inline-block;
+      padding: 0 1.5rem 0 0;
+      word-wrap: break-word;
+      background-image: url(icon.get-icon(
+        "standard--chevron-right-sml",
+        core.$uq-neutral-dark80
+      ));
+      background-position: right 0.1rem center;
+
+      &:last-of-type {
+        background: none;
       }
     }
+
+    
+
   }
 
   // Breadcrumb link
   &__link {
-    color: $breadcrumb-link;
-    text-decoration: none;
-    max-width: 260px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: inline-block;
+    text-decoration: underline;
+    color: core.$uq-neutral-dark40;
 
     &:hover {
-      color: $breadcrumb-link;
-      text-decoration: underline;
+
     }
   }
 }
